# fastapi-backend

./: .dockerignore  .env.example  Dockerfile  README.md  db.py  docker-compose.yml  main.py  pyproject.toml
appointments/: models.py  router.py  schemas.py
core/: config.py
nginx/: nginx.conf
tutors/: models.py  router.py  schemas.py
users/: auth.py  manager.py  models.py  schemas.py
